--- a/Index.html
+++ b/Index.html
@@ -1,61 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DataX LLC</title>
-    <style>
-        /* Style for the menu bar */
-        .menu {
-            background-color: #333;
-            overflow: hidden;
-        }
-
-        .menu a {
-            float: left;
-            display: block;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-
-        .menu a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-
-        /* Style for the content container */
-        .content {
-            padding: 20px;
-        }
-
-        /* Style for the footer */
-        .footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 10px;
-        }
-    </style>
-</head>
-<body>
-    <div class="menu">
-        <a href="#home">Home</a>
-        <a href="#about">About Us</a>
-        <a href="#services">Services</a>
-        <a href="#contact">Contact</a>
-    </div>
-
-    <div class="content">
-        <h1>Welcome to DataX LLC</h1>
-        <p>Your trusted source for data solutions.</p>
-    </div>
-
-    <div class="footer">
-        <p>Contact Us:</p>
-        <p>Email: info@dataxllc.com</p>
-        <p>Phone: (123) 456-7890</p>
-    </div>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>React App</title><script defer="defer" src="/static/js/main.5bbc425b.js"></script><link href="/static/css/main.1cd30ce7.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
